# Agent-X

./: .env  .env.example  .gitignore  PLAN.md  README.md  alembic.ini  pyproject.toml
agentx/: config.py
agentx/cli/: main.py  stream.py
agentx/context/: assembler.py  budget.py  selectors.py
agentx/governance/: audit.py  gate.py
agentx/intelligence/: dep_graph.py  impact.py  models.py  query.py  symbol_index.py
agentx/llm/: anthropic_client.py  base.py  fake.py  ollama_client.py  openai_client.py  openrouter_client.py  registry.py  types.py
agentx/loop/: engine.py  state.py  termination.py
agentx/persistence/: models.py  postgres.py  redis_layer.py  state_store.py
agentx/repo/: acquisition.py  classifier.py  context_builder.py  health.py  models.py
agentx/runtime/: patch.py  sandbox.py  workspace.py
agentx/tools/: base.py  bash.py  create_file.py  edit_file.py  git_ops.py  glob_tool.py  grep.py  read_file.py  run_tests.py  symbols.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_audit_extend.py  0003_repo_context.py
docker/: compose.yml  sandbox.Dockerfile
scripts/: probe_toolcall.py
tests/: conftest.py  test_context.py  test_docker_sandbox.py  test_governance.py  test_loop.py  test_patch.py  test_state_handoff.py
tests/intelligence/: test_dep_graph.py  test_generic_parser.py  test_go_parser.py  test_impact.py  test_javascript_parser.py  test_python_parser.py  test_query.py  test_rust_parser.py  test_symbol_indexer.py  test_typescript_parser.py
tests/llm/: test_anthropic_client.py  test_config.py  (+5 more)
toy_repo/: pyproject.toml
(+18 files in other folders)
