[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentx"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "psycopg2-binary>=2.9.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "docker>=7.0.0",
]

[project.scripts]
agentx = "agentx.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["agentx"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
